--- a/src/index.css
+++ b/src/index.css
@@ -4,4 +4,136 @@
   box-sizing: border-box;
   font-family: "inter";
   font-weight: medium;
+  /* background-color: black; */
+}
+
+body {
+  background-color: black;
+}
+
+.main-logo {
+  width: 12vw;
+  background-color: transparent;
+}
+
+.header {
+  position: absolute;
+  padding: 0px 10%;
+  background-color: transparent;
+  width: 100%;
+  display: block;
+}
+
+
+.login-img {
+  position: absolute;
+  z-index: -1;
+  background-size: cover;
+  width: 100%;
+  min-height: 100vh;
+  object-fit: cover;
+  opacity: 0.5;
+}
+
+.login-form-main {
+  background-color: rgba(0, 0, 0, 0.1); 
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.login-form {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  margin-top: 100px;
+  /* background-color: black; */
+  background-color: rgba(0, 0, 0, 0.75); 
+  color: #fff;
+  padding: 10px;
+  border-radius: 5px;
+  height: 724px;
+  width: 480px;
+  padding: 48px 68px;
+}
+
+.login-form h1 {
+  margin-bottom: 20px;
+  font-size: 2.2rem;
+  color: #fff;
+}
+
+.inputs input {
+  margin-block: 10px;
+  display: block;
+  width: 100%;
+  padding: 20px 10px;
+  border-radius: 5px;
+  background-color: transparent;
+  outline: none;
+  border: 1px solid #fff;
+  color: #fff;
+  font-size: 1rem;
+}
+
+.login-form button {
+  padding: 13px;
+  cursor: pointer;
+  font-size: 1rem;
+  font-weight: bolder;
+  background-color: #ff1621;
+  outline: none;
+  border: none;
+  color: #fff;
+  border-radius: 5px;
+}
+
+.or {
+  text-align: center;
+  margin-block: 30px;
+}
+
+.sign-in-code {
+  background-color: rgba(249, 249, 249, 0.1);
+  padding: 14px;
+  border-radius: 5px;
+  text-align: center;
+  font-weight: 600;
+  cursor: pointer;
+}
+
+.forgot {
+  text-align: center;
+  margin-block: 13px;
+}
+
+.remember {
+  display: flex;
+  margin: 10px 0;
+}
+
+.remember input{
+  margin: 0px 0px 0px 0px;
+  width: 40px;
+  cursor: pointer;
+  accent-color: white;
+}
+
+.last-section-login a {
+  color: #fff;
+}
+
+.last-section-login {
+  margin: 14px 0;
+}
+
+.para-3 {
+  color: grey;
+  font-weight: 500;
+}
+
+.para-4 {
+  color: gray;
+  margin-block: 20px;
+  font-size: 0.9rem;
 }
