created a hooks to handle the api calls of TMDB

--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "inter";
+  font-family: "raleway";
   font-weight: medium;
 }
 
@@ -27,7 +27,6 @@ body {
 
 .signout-box {
   display: flex;
-  align-items: center;
   cursor: pointer;
   font-size: 0.9rem;
 }
@@ -241,3 +240,17 @@ footer ul li {
 
 /* Browser */
 
+.logOut {
+  background-color: red;
+  padding: 11px;
+  margin-left: 10px;
+  font-weight: bolder;
+  border-radius: 5px;
+  border: 2px solid transparent;
+}
+
+.logOut:hover {
+  background-color: #fff;
+  color: #be010a;
+  border: 2px solid #be010a;
+}
