--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "raleway";
+  font-family: "Poppins";
   font-weight: medium;
 }
 
@@ -36,13 +38,14 @@ body {
 }
 
 .header {
-  position: absolute;
+  position: fixed;
   /* background-color: red; */
   width: 100%;
   padding: 0px 50px;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  z-index: 100;
 }
 
 
@@ -253,4 +256,71 @@ footer ul li {
   background-color: #fff;
   color: #be010a;
   border: 2px solid #be010a;
+}
+
+/* videoTitle */
+
+
+.videoTitle {
+  padding-top: 25%;
+  padding-left: 40px;
+}
+
+.videoTitle h1 {
+  font-size: 4rem;
+}
+
+.videoTitle p {
+  max-width: 700px;
+  margin-block: 10px;
+  font-size: 0.98rem;
+}
+
+.videoButtons {
+  margin-top: 10px;
+}
+
+.videoButtons button {
+  margin: 5px;
+  padding: 10px 30px;
+  cursor: pointer;
+  font-weight: bold;
+  font-size: 1.2rem;
+  border: none;
+  border-radius: 5px;
+}
+
+.btnTwo {
+  background-color: gray;
+  color: #Fff;
+
+}
+
+.btnTwo:hover {
+  opacity: 0.6;
+}
+
+.infoIcon {
+  font-size: 1.5rem;
+  color: #fff;
+}
+
+/* iframe */
+
+.main-container-hero {
+  position: relative;
+}
+
+iframe {
+  position: absolute;
+  top: 0px;
+  width: 100%;
+  aspect-ratio: 16/9;
+  z-index: -1;
+  /* opacity: 0.4 */
+}
+
+.videoTitle {
+  aspect-ratio: 16/9;
+  background: linear-gradient(to right, black, transparent);
 }
